1/15/2001
	- 1.1.7 released.
	- Fix some signed/unsigned printing issues for KEY records
	  (Pasi Eronen <pe@iki.fi>)
	- Add routines to generate SIG(0) message signatures
	  (Pasi Eronen <pe@iki.fi>)

1/8/2001
	- Add support for unknown RR types & classes.

12/3/2000
	- The target in an MX record can be compressed.

11/18/2000
	- Add jnamed.conf example to USAGE

8/27/2000
	- 1.1.6 released
	- The high level api wasn't properly initialized.
	  (Christopher Fitch <cfitch@sbti.com>)
	- Added a routine to build a SIG record based on the results of
	  a DSA signature (Pasi Eronen <pe@iki.fi>)
	
8/13/2000
	- Added 'clear' command to update client
	- Removed some deprecated code

8/8/2000
	- Invalid binary labels were not always rejected
	- SRV initialization didn't work (reported by Chuck Santos
	  <csantos@netnumber.com>)
	- jnamed failed if no Cache was specified
	- The Zone object didn't handle zones with no NS records.
	- Added support for the NAPTR record (Chuck Santos
	  <csantos@netnumber.com>)

7/17/2000
	- 1.1.5 released
	- CERT records were printed with a negative keytag half the time.
	  (reported by Jakob Schlyter <jakob@crt.se>).
	- Printing a KEY record prints the key id.
	  (Jakob Schlyter <jakob@crt.se>)

6/25/2000
	- A Cache now contains a thread that periodically removes expired
	  data.

6/4/2000
	- update client syntax enhancement - add/delete/require/prohibit/glue
	  no longer require -r, -s, or -n.

6/3/2000
	- update client supported prohibiting individial records, which is
	  not supported by dynamic update.

5/21/2000
	- Win2000 support

4/15/2000
	- ExtendedResolver supports load balancing of servers.

4/2/2000
	- Minor fix to base64 decoding

3/22/2000
	- name comparison should always be case insensitive
	  (Darrell Kindred <dkindred@tislabs.com>

3/5/2000
	- 1.1.4 released
	- added Cache.setMaxNCache(), which sets the maximum amount of time
	  that a negative answer is cached.

2/10/2000